--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ layout: archive
           In addition to studying at the University of Texas, I have ventured out by taking engineering and business related courses at the University of California, Los Angeles, as well as in Barcelona, Greece, and Paris. I am extremely passionate about technology and innovation, while being considered a hard-working, determined individual who will go above and beyond to find any solution.
         </p>
         <p>
-          Currently, I am seeking a software engineering internship position.
+          Currently, I am seeking a new-grad/junior software engineering position.
         </p>
       </div>
       <section class="education">
