--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,18 +71,20 @@ layout: archive
 <!-- </section> -->
 <section class="experience">
   <h2 class="section__title">Experience</h2>
-  <div class="experience__item">
-    <img src="../assets/images/aristocrat.jpg" alt="Experience Photo" class="experince__photo">
-    <h3 class="experience__item">Software Engineering Intern</h3>
-      <p class="experience__stack">Aristocrat</p>
-      <p class="experience__dates">Aug - May 2024</p>
-      <p class="experience__description">
-        <!-- Add your project description here -->
-        <ul>
-          <li>Developed UI features for internal tools within the Mercury Studio suite, enchancing user experience and improving workflow efficiency using React and TypeScript.</li>
-          <li>Optimized game assets within the Mercury Studio tool, streamlining asset management and contributing to overall system performance.</li>
-        </ul>
-      </p> 
+  <div class="project__grid">
+    <div class="experience__item">
+      <img src="../assets/images/aristocrat.jpg" alt="Experience Photo" class="experince__photo">
+      <h3 class="experience__item">Software Engineering Intern</h3>
+        <p class="experience__stack">Aristocrat</p>
+        <p class="experience__dates">Aug - May 2024</p>
+        <p class="experience__description">
+          <!-- Add your project description here -->
+          <ul>
+            <li>Developed UI features for internal tools within the Mercury Studio suite, enchancing user experience and improving workflow efficiency using React and TypeScript.</li>
+            <li>Optimized game assets within the Mercury Studio tool, streamlining asset management and contributing to overall system performance.</li>
+          </ul>
+        </p> 
+    </div>
   </div>
 </section>
 
