--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -71,7 +71,7 @@ layout: archive
 <!-- </section> -->
 <section class="experience">
   <h2 class="section__title">Experience</h2>
-  <div class="project__grid">
+  <div class="projects__grid">
     <div class="experience__item">
       <img src="../assets/images/aristocrat.jpg" alt="Experience Photo" class="experince__photo">
       <h3 class="experience__item">Software Engineering Intern</h3>
@@ -408,7 +408,7 @@ layout: archive
   padding-top: 0;
 }
 
-.about-me, .skills, .resume, .education, .hobbies, .projects{
+.about-me, .skills, .resume, .education, .hobbies, .projects, .experience{
   background: #fff;
   padding: 1.5em;
   border-radius: 10px;
