--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -74,7 +74,7 @@ layout: archive
   <div class="projects__grid">
     <div class="experience__item">
       <img src="../assets/images/aristocrat.jpg" alt="Experience Photo" class="experince__photo">
-      <h3 class="experience__item">Software Engineering Intern</h3>
+      <h3 class="experience__title">Software Engineering Intern</h3>
         <p class="experience__stack">Aristocrat</p>
         <p class="experience__dates">Aug - May 2024</p>
         <p class="experience__description">
