--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: archive
         </ul>
       </div>
       <div class="resume">
-        <a href="../assets/images/Carlos Trevino Resume.pdf" class="resume-button" target="_blank">My Resume</a>
+        <a href="../assets/images/Kiko Trevino Resume.pdf" class="resume-button" target="_blank">My Resume</a>
       </div>
     </div>
   </div>
@@ -80,8 +80,12 @@ layout: archive
         <p class="experience__description">
           <!-- Add your project description here -->
           <ul>
-            <li>Developed UI features for internal tools within the Mercury Studio suite, enchancing user experience and improving workflow efficiency using React and TypeScript.</li>
-            <li>Optimized game assets within the Mercury Studio tool, streamlining asset management and contributing to overall system performance.</li>
+            <li>Developed and implemented UI features for internal tools within the Mercury Studio suite, improving user
+              experience and streamlining workflows for internal users using React and TypeScript.</li>
+            <li>Optimized game asset pipelines by refining asset processing within the Mercury Studio tool, resulting in improved
+              load times and system performance.</li>
+            <li>Collaborated with cross-functional teams to identify UI/UX improvements and integrate feedback into feature
+              designs, ensuring alignment with user needs and delivering high-quality, scalable solutions.</li>
           </ul>
         </p> 
     </div>
