--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -76,7 +76,7 @@ layout: archive
       <img src="../assets/images/aristocrat.jpg" alt="Experience Photo" class="experince__photo">
       <h3 class="experience__title">Software Engineering Intern</h3>
         <p class="experience__stack">Aristocrat</p>
-        <p class="experience__dates">Aug - May 2024</p>
+        <p class="experience__dates">Aug 2024 - Present</p>
         <p class="experience__description">
           <!-- Add your project description here -->
           <ul>
