updated resume and aristocrat bio

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -80,12 +80,12 @@ layout: archive
         <p class="experience__description">
           <!-- Add your project description here -->
           <ul>
-            <li>Developed and implemented UI features for internal tools within the Mercury Studio suite, improving user
-              experience and streamlining workflows for internal users using React and TypeScript.</li>
-            <li>Optimized game asset pipelines by refining asset processing within the Mercury Studio tool, resulting in improved
-              load times and system performance.</li>
-            <li>Collaborated with cross-functional teams to identify UI/UX improvements and integrate feedback into feature
-              designs, ensuring alignment with user needs and delivering high-quality, scalable solutions.</li>
+            <li>Designed and implemented a PostgreSQL database using Google Cloud SQL to store Aristocrat’s slot game
+              information, building data models and managing data pipelines to ensure efficient data organization and integrity.</li>
+            <li>Utilized Gemini API to assist in automating and streamlining data extraction from large game files, improving the
+              efficiency of slot game information gathering and management.</li>
+              <li>Developed and implemented UI features for internal tools within the Mercury Studio suite, improving user
+                experience and streamlining workflows for internal users using React and TypeScript.</li>
           </ul>
         </p> 
     </div>
@@ -171,7 +171,8 @@ layout: archive
         <ul>
           <li>Developed chat room application using Java Socket programming and complex object-oriented programming
             principles.</li>
-          <li>Built and enabled one-on-one chat between users while hosting up to five clients within the server.</li> 
+          <li>Built and enabled numerous features within the chat room, including one-on-one chat between users group chats,
+            and hosting up to five clients at a time.</li> 
         </ul>
       </p> 
     </div>
